...
                          ],
                        ),
                        const SizedBox(height: 20),
                        Text(
                          profile != null
                              ? 'Hi, ${profile.firstname} ${profile.lastname}'
                              : 'Hi, Anonymous...',
                          style: const TextStyle(
                            fontSize: 24,
                            fontWeight: FontWeight.bold,
                            color: AppColors.black,
                          ),
                        ),
...
                      onPressed: () => context.push(AppRoute.booking),
                      icon: const Icon(
                        Icons.confirmation_num_outlined,
                        color: AppColors.navIcon,
                      ),
                      label: const Text(
                        'Book your tickets now!',
                        style: TextStyle(
                          color: AppColors.navIcon,
                          fontWeight: FontWeight.w600,
                        ),
                      ),
                      style: ElevatedButton.styleFrom(
...
          ),

          const SliverToBoxAdapter(
            child: Padding(
              padding: EdgeInsets.symmetric(horizontal: 20.0, vertical: 8.0),
              child: Text(
                'Events',
                style: TextStyle(
                  fontSize: 20,
                  fontWeight: FontWeight.bold,
                  color: AppColors.black,
                ),
              ),
...

          if (showPopularAnimals) ...[
            const SliverToBoxAdapter(
              child: Padding(
                padding: EdgeInsets.fromLTRB(20, 24, 20, 12),
                child: Text(
                  'Recommend Animals',
                  style: TextStyle(
                    fontSize: 20,
                    fontWeight: FontWeight.bold,
                    color: AppColors.black,
                  ),
                ),
...
